resources15/hello-kubernetes-app.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-simon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-simon
  template:
    metadata:
      labels:
        app: hello-simon
    spec:
      containers:
      - name: hello-simon
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-simon
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-simon
---
